[tool.poetry]
name = "exeter-revamp"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.0.1"
colorama = "^0.4.4"
numpy = "^1.20.1"
requests = "^2.25.1"
aiohttp = "^3.7.3"
bs4 = "^0.0.1"
pymongo = "^3.11.3"
selenium = "^3.141.0"
pyPrivnote = "^0.0.1-alpha.1"
gTTS = "^2.2.2"
dnspython = "^2.1.0"
image = "^1.5.33"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
